cncProd/force-app/main/default/objects/Share__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Share (Account)</relationshipLabel>
    <relationshipName>Share1</relationshipName>
    <type>Lookup</type>
</CustomField>