cncProd/force-app/main/default/objects/Share__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Cannot be JCC Contact</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>notEqual</operation>
            <value>JCC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Share</relationshipLabel>
    <relationshipName>Share</relationshipName>
    <type>Lookup</type>
</CustomField>