cncProd/force-app/main/default/objects/Share__c/fields/Contact_Processed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Processed</label>
    <type>Checkbox</type>
</CustomField>