cncProd/force-app/main/default/objects/Share__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Share</relationshipLabel>
    <relationshipName>Share</relationshipName>
    <type>Lookup</type>
</CustomField>