cncProd/force-app/main/default/objects/Share__c/fields/Share_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Share_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Share Unique Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>