cncProd/force-app/main/default/objects/Share__c/fields/User_or_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>User_or_Group_Id__c</fullName>
    <label>User or Group Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>