cncProd/force-app/main/default/objects/Share__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Project Aodigy</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>